--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^12.2.2",
+    "gh-pages": "^3.1.0",
     "i18next": "^19.8.4",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
